--- a/app.json
+++ b/app.json
@@ -1,12 +1,65 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/discover/index",
+    "pages/movie/index",
+    "pages/my/index",
+    "pages/classic/index",
+    "pages/cinema/index"
   ],
   "window":{
+    "backgroundColor": "#eeeeee",
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarTitleText": "天健的微信小程序",
+    "navigationBarTextStyle":"black",
+    "enablePullDownRefresh": true,
+    "onReachBottomDistance": 100
+  },
+  "tabBar": {
+    "position":"bottom",
+    "color": "#000",
+    "selectedColor": "#90ee90",
+    "backgroundColor": "#fff",
+    "borderStyle": "black",
+    "list": [
+      {
+          "pagePath":"pages/movie/index",
+          "text":"电影",
+          "iconPath":"images/movie.png",
+          "selectedIconPath":"images/movie.png"
+      },
+      {
+        "pagePath": "pages/cinema/index",
+        "text": "影院",
+        "iconPath": "images/cinema.png",
+        "selectedIconPath": "images/cinema.png"
+      },
+      {
+        "pagePath": "pages/classic/index",
+        "text": "经典",
+        "iconPath": "images/heart.png",
+        "selectedIconPath": "images/heart.png"
+      },
+      {
+        "pagePath": "pages/discover/index",
+        "text": "发现",
+        "iconPath": "images/earth.png",
+        "selectedIconPath": "images/earth.png"
+      },
+      {
+        "pagePath": "pages/my/index",
+        "text": "我的",
+        "iconPath": "images/my.png",
+        "selectedIconPath": "images/my.png"
+      }
+    ]
+  },
+  "networkTimeout":{
+    "request":2000,
+    "connectSocket":2000,
+    "uploadFile":2000,
+    "downloadFile":2000 
   }
 }
